--- a/index.html
+++ b/index.html
@@ -1,9 +1,101 @@
 <html>
-    <head> 
-        <title>Danielle Angtuaco</title>
-    </head>
-    <body>
-        HELLO WORLD!!
-    </body>
-    
+	<head>
+		<TITLE>Danielle S. Angtuaco</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+			<div class="row">
+				<div id="left-col" class="col-4">
+					<h4>Danielle S. Angtuaco</h4>
+					<img class="profile-pic" src="photo1.jpg">
+					<h6>De La Salle University </h6>
+					<ul>
+						<li><a href="#objective"> objective </a> </li>
+						<li><a href="#education"> education </a> </li>
+						<li><a href="#co-curricular activities"> co-curricular activities </a></li>
+						<li><a href="#personal background"> personal background </a></li>
+					</ul>
+				</div>
+				<div id="right-col" class="col">
+					<h1> Danielle S. <span class="surname"> Angtuaco </span></h1>
+                    <span class="resume-head">
+					<h3> danielle_angtuaco@dlsu.edu.ph </h3>
+                    <h3> 09155414346</h3></span>
+						<hr>
+                        <section id="objective">
+							<h2> Objective </h2>
+						</section>
+                        <div class="container">
+						<p>To be able to accomplish a part of the requirements for the programming class LBYEC71. </p>
+                        </div>
+					<section id="education">
+						<h2> Education</h2>
+					</section>
+						<div class="container">
+							<div class="row">
+								<div class="col-3">
+								<h6> September 2017-Present </h6>
+								</div>
+								<div class="col">
+								<h6> DE LA SALLE UNIVERSITY </h6>
+								<h9> Bachelor of Science in Industrial Engineering</h9>
+								</div>
+							</div>
+							<br>
+							<div class="row">
+								<div class="col-3">
+								<h6> June 2006-March 2017 </h6>
+								</div>
+								<div class="col">
+								<h6> UNO HIGH SCHOOL </h6>
+								<h9> High School Diploma </h9>
+								</div>
+							</div>
+						</div>
+						<br>
+					<section id="Co-Curricular Activities">
+						<h2> Co-Curricular Activities</h2>
+					</section>
+						<div class="container">
+							<div class="row">
+								<div class="col-3">
+								<h6> January 2017 </h6>
+								</div>
+								<div class="col">
+								<h6>THE CENTER FOR SOCIAL CONCERN AND ACTION (COSCA)</h6>
+								<h9>Assisted in the For The Kids event.</h9>
+								</div>
+							</div>
+							<br>
+							<div class="row">
+								<div class="col-3">
+								<h6> 2018- Present  </h6>
+								</div>
+								<div class="col">
+								<h6> INDUSTRIAL MANAGEMENT ENGINEERING SOCIETY (IMES)</h6>
+								<h9> Junior Officer </h9>
+								</div>
+							</div>
+						</div>
+						<br>
+					<section id="Personal Background">
+						<h2> Personal Background</h2>
+					</section>
+                    <div class="container">
+						<p> Born on March 24,1999 in St. Luke’s Hospital Fluent in English, Filipino, Mandarin and Fukien. Knowledgeable in specific and certain mathematics and Microsoft programs Interests: animals, cooking, food, sports, movies.</p>
+                    </div>
+						<br>
+					<section id="References">
+						<h2> References</h2>
+					</section>
+                    <div class="container">
+						<p> JOSE, JOHN ANTHONY C.</p>
+						<p> LBYEC71 Professor</p>
+						<p> john_anthony.jose@dlsu.edu.ph</p>
+						<p> 2401 Taft Ave, Malate, Manila, 1004 Metro Manila </p>
+                    </div>
+			</div>
+		</div>
+	</body>
 </html>
